objects/ARVault__c.object
<CustomObject>
    <fields>
        <fullName>AutoRabitTest__c</fullName>
        <label>AutoRabitTest</label>
        <referenceTo>AutoRabitTest__c</referenceTo>
        <relationshipLabel>ARVault</relationshipLabel>
        <relationshipName>ARVault</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
</CustomObject>